# Autonomus_Customer_Feedback_System

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260417_0001_create_anomalies_table.py
scripts/: evaluate_rag_metrics.py  run_rlhf_cycle.py  train_churn_model.py
src/feedback_system/: __init__.py  config.py  logging.py  main.py
src/feedback_system/agents/: __init__.py  resolution_graph.py
src/feedback_system/anomaly/: __init__.py  detector.py  schemas.py  worker.py
src/feedback_system/churn/: __init__.py  api.py  feature_store.py  model.py  schemas.py  worker.py
src/feedback_system/clients/: embedding.py  multimodal.py  vector_store.py
src/feedback_system/db/: __init__.py  base.py  models.py  session.py
src/feedback_system/events/: __init__.py  publisher.py
src/feedback_system/ingestion/: __init__.py  api.py  schemas.py
src/feedback_system/integrations/: __init__.py  jira_sync.py  resolution_notifier.py
src/feedback_system/resolution/: __init__.py  api.py  schemas.py
src/feedback_system/rlhf/: __init__.py  api.py  policy.py  reward_model.py  schemas.py  store.py  (+1 more)
tests/agents/: test_resolution_graph.py
tests/anomaly/: test_detector.py
tests/churn/: test_churn_api.py  test_churn_model.py
tests/clients/: test_external_calls_mocking.py
tests/ingestion/: test_api.py
tests/integrations/: test_jira_sync.py  test_resolution_notifier.py
tests/resolution/: test_resolution_api.py
tests/rlhf/: test_reward_model.py  test_rlhf_api.py
