[project]
name = "autonomous-customer-feedback-system"
version = "0.1.0"
description = "Agentic customer feedback automation platform"
readme = "general_idea.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic==1.14.0",
  "aiokafka==0.11.0",
  "asyncpg==0.30.0",
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "langchain==0.3.13",
  "langgraph==0.2.60",
  "openai==1.58.1",
  "orjson==3.10.12",
  "pinecone==5.4.2",
  "pydantic==2.10.5",
  "pydantic-settings==2.7.1",
  "python-dotenv==1.0.1",
  "sqlalchemy==2.0.36",
  "structlog==24.4.0",
  "tenacity==9.0.0",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "ruff==0.8.4",
]
eval = [
  "pandas==2.2.3",
  "ragas==0.2.10",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
